# MojitoGlass

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  readme.md
includes/: ansi_char.hpp  backends.hpp  common.hpp  math.hpp  surface.hpp
includes/backends/: vulkan_backend.hpp
includes/backends/vulkan/: allocator.hpp  backend_builder.hpp  command_buffer.hpp  command_pool.hpp  default_values.hpp  fence.hpp  formats.hpp  helpers.hpp  images_usages.hpp  queue.hpp  semaphore.hpp  swapchain.hpp  swapchain_builder.hpp  vma_usages.hpp  vulkan_backend_infos.hpp
includes/math/: math_test.hpp  vec2.hpp  vec4.hpp
includes/surface/: sdl_surface.hpp
libs/: CMakeLists.txt
src/: CMakeLists.txt  backends.cpp
src/backends/: vulkan_backend.cpp
src/backends/vulkan/: queue.cpp  vma_usages.cpp
src/math/: math_test.cpp
src/surface/: sdl_surface.cpp
src/test/: main.cpp
tests/: CMakeLists.txt  backend_test.cpp  backend_test.hpp  main.cpp  math_test.hpp  surface_test.hpp
